ADD: get all songs function done
